Fix invisible joystick

--- a/frontend/src/style.css
+++ b/frontend/src/style.css
@@ -1,4 +1,4 @@
-* {
+*:not(.joystickDiv, .back, .front, .nipple) {
     margin: 0;
     padding: 0;
     overflow: hidden;
